--- a/foodcrav/index.css
+++ b/foodcrav/index.css
@@ -1,3 +1,14 @@
-#heading {
-    color:red;
+.header {
+    display: flex;
+}
+.logo {
+     width: 100px;
+}
+.navbar>ul {
+    display: flex;
+    
+}
+.navbar>ul>li {
+    padding: 10px;
+    margin: 10px;  
 }
