--- a/foodcrav/index.css
+++ b/foodcrav/index.css
@@ -1,14 +1,45 @@
 .header {
     display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
 }
 .logo {
-     width: 100px;
+     width: 150px;
 }
 .navbar>ul {
     display: flex;
+    list-style-type: none;
     
 }
 .navbar>ul>li {
     padding: 10px;
     margin: 10px;  
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.res-card{
+    width: 200px;
+    padding: 10px;
+    margin:5px;
+    background-color: #f0f0f0; 
+    border-radius:10px;
+    overflow-wrap: break-word;
+}
+
+.res-card:hover{
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+.res-logo {
+    width: 100%;
+    height: 45%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.search{
+    padding: 10px;
 }
