--- a/foodcrav/index.css
+++ b/foodcrav/index.css
@@ -19,14 +19,25 @@
     display: flex;
     flex-wrap: wrap;
 }
-
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
 .res-card{
     width: 200px;
     padding: 10px;
     margin:5px;
     background-color: #f0f0f0; 
     border-radius:10px;
-    overflow-wrap: break-word;
+   
+}
+.shimmer-card{
+    width: 200px;
+    padding: 10px;
+    margin:5px;
+    height: 300px;
+    background-color: #f0f0f0; 
+    border-radius:10px;
 }
 
 .res-card:hover{
@@ -40,6 +51,7 @@
     object-fit: cover;
     border-radius: 10px;
 }
-.search{
-    padding: 10px;
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
 }
