--- a/foodcrav/index.css
+++ b/foodcrav/index.css
@@ -15,6 +15,14 @@
     padding: 10px;
     margin: 10px;  
 }
+.navbar>ul>button{
+    margin: 10px;
+    border-radius: 25%;
+}
+.navbar>ul>button:hover{
+    cursor:pointer;
+    border:1px solid orange;
+}
 .res-container{
     display: flex;
     flex-wrap: wrap;
@@ -53,5 +61,15 @@
 }
 .filter-btn{
     margin: 10px;
+    cursor: pointer;
+}
+.search-box{
+    margin: 10px;
+}
+.search-filter{
+    display: flex;
+    justify-content: space-between;
+}
+.search-btn:hover{
     cursor: pointer;
 }
